MFB: Fixed bug #45004 (pg_insert() does not accept 4 digit timezone format)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@259993 c90b9560-bf6c-de11-be94-00142212c4b1